@@ -7,6 +7,12 @@ package proyecto.ordenamiento.externo;
 import java.util.LinkedList;
 import java.util.Scanner;
 import java.util.Arrays;
+
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Paths;
+import java.util.Scanner;
 /**
  * @author Zuriel Zárate García.
  */
@@ -19,85 +25,111 @@ public class MezclaE{
     }
     
     public LinkedList<String> bloque(LinkedList<String> alumnos, int ordenamiento, int i){
+        
+        
+        FileWriter writer = null;
+        String linea;
+         
+        /*      
+        ##### Creación de archivo iteraciones y carpetas iniciales #####    
+        */
+        
+        String nombreCarpeta = "";
+        
+        switch(ordenamiento){
+            case 0: {nombreCarpeta = "Archivos (Ord. por Nombre)"; break;}   
+            case 1: {nombreCarpeta = "Archivos (Ord. por Apellido)"; break;} 
+            case 2: {nombreCarpeta = "Archivos (Ord. por # Cuenta)"; break;}
+        }
+        
+        //inicializarDir crea las carpetas iniciales y el archivo iteraciones.txt
+        File iteraciones = Utilidades.inicializarDir(Paths.get("Archivos ordenamientos").toAbsolutePath(), "Mezcla Equilibrada", nombreCarpeta);
+        
+        //Creamos la carpeta de archivos auxiliares o vaciamos la anterior
+        File auxiliares = new File(iteraciones.toPath().getParent().toAbsolutePath().toString() + File.separatorChar + "Archivos auxiliares");
+        if(!auxiliares.exists()){
+            auxiliares.mkdir();
+        }else{
+            Utilidades.borrarDirectorio(auxiliares);
+        }
+        
         LinkedList<String> lista = new LinkedList<String>();
         String[] keys = new String[alumnos.size()];
         Double[] llaves = new Double[alumnos.size()];
-        int aux,j=i+1;
+        int aux, j = i + 1;
 
         i++;
         j++;
 
-        if(ordenamiento!=2){
+        if (ordenamiento != 2) {
 
-            if(i == alumnos.size()-1){
+            if (i == alumnos.size() - 1) {
                 //System.out.println(i+" es igual a "+(lista.size()-1));
-                lista.add(alumnos.get(i));
-            }
-            else{
+                lista.add(alumnos.get(i++));
+            } else {
 
-                for(int k=i; k<alumnos.size(); k++){
+                for (int k = i; k < alumnos.size(); k++) {
                     String[] datos = alumnos.get(k).split(",");
-                    keys[k] = datos[ordenamiento]; 
+                    keys[k] = datos[ordenamiento];
                     //System.out.println(keys[k]);
                 }
 
                 aux = 1;
-                while(j<alumnos.size() && aux != -1){
+                while (j < alumnos.size() && aux != -1) {
                     System.out.println(keys[i].compareToIgnoreCase(keys[j]));
-                    if(keys[i].compareToIgnoreCase(keys[j]) <= 0){
+                    if (keys[i].compareToIgnoreCase(keys[j]) <= 0) {
                         //System.out.println("Se añadio a: "+alumnos.get(i));
                         //System.out.println(keys[i]+" es menor que "+keys[j]);
                         lista.add(alumnos.get(i));
                         i++;
                         j++;
-                    }
-                    else{
-                        aux=-1;
+                    } else {
+                        aux = -1;
                     }
                 }
 
-                if(i<=alumnos.size()-1){
+                if (i <= alumnos.size() - 1) {
+                    //System.out.println("Falta agregar a "+(i)+" :v");
+                    lista.add(alumnos.get(i));
+                }
+            }
+
+        } else {
+
+            if (i == alumnos.size() - 1) {
+                //System.out.println(i+" es igual a "+(lista.size()-1));
+                lista.add(alumnos.get(i++));
+            } else {
+
+                for (int k = i; k < alumnos.size(); k++) {
+                    //String[] datos = alumnos.get(k).split(",");
+                    llaves[k] = Double.parseDouble(alumnos.get(k).split(",")[ordenamiento]);
+                    //System.out.println(keys[k]);
+                }
+
+                aux = 1;
+                while (j < alumnos.size() && aux != -1) {
+                    //System.out.println();
+                    if (llaves[i] <= llaves[j]) {
+                        //System.out.println("Se añadio a: "+alumnos.get(i));
+                        //System.out.println(llaves[i]+" es menor que "+llaves[j]);
+                        lista.add(alumnos.get(i));
+                        i++;
+                        j++;
+                    } else {
+                        aux = -1;
+                    }
+                }
+
+                if (i <= alumnos.size() - 1) {
                     //System.out.println("Falta agregar a "+(i)+" :v");
                     lista.add(alumnos.get(i));
                 }
             }
 
         }
-        else{
-
-            if(i == alumnos.size()-1){
-                //System.out.println(i+" es igual a "+(lista.size()-1));
-                lista.add(alumnos.get(i));
-            }
-            else{
-
-                for(int k=i; k<alumnos.size(); k++){
-                    String[] datos = alumnos.get(k).split(",");
-                    llaves[k] = Double.parseDouble(datos[ordenamiento]); 
-                    //System.out.println(keys[k]);
-                }
-
-                aux = 1;
-                while(j<alumnos.size() && aux != -1){
-                    //System.out.println();
-                    if(llaves[i]<=llaves[j]){
-                        //System.out.println("Se añadio a: "+alumnos.get(i));
-                        //System.out.println(llaves[i]+" es menor que "+llaves[j]);
-                        lista.add(alumnos.get(i));
-                        i++;
-                        j++;
-                    }
-                    else{
-                        aux=-1;
-                    }
-                }
-
-                if(i<=alumnos.size()-1){
-                    //System.out.println("Falta agregar a "+(i)+" :v");
-                    lista.add(alumnos.get(i));
-                }
-            }
-
+        if (i == alumnos.size() - 1) {
+            i++;
         }
         //Se agrega el último índice en i;
         //System.out.println("El indice retornado es: "+i);
@@ -105,135 +137,168 @@ public class MezclaE{
         return lista;
     }
 
-    public LinkedList<String> intercalacion(LinkedList<String> alumnos, int ordenamiento){
+    public LinkedList<LinkedList<String>> primerFase(LinkedList<String> alumnos, int ordenamiento) {
 
-        LinkedList<String> listaA = new LinkedList<String>();
-        LinkedList<String> listaB = new LinkedList<String>();
-        LinkedList<String> listaC = new LinkedList<String>();
-        int i=-1;
+        LinkedList<LinkedList<String>> listaA = new LinkedList<LinkedList<String>>();
+        LinkedList<LinkedList<String>> listaB = new LinkedList<LinkedList<String>>();
 
-        do{  
+        int i = -1;
+        int count = 0;
+        do {
 
-            if(i<alumnos.size()){   
-                listaA.addAll(bloque(alumnos,ordenamiento,i));
-                i = Integer.parseInt(listaA.remove(listaA.size()-1));
-                //System.out.println("A: "+"");
-                //imprimirLista(listaA);
+            if (i < alumnos.size()) {
+                listaA.add(bloque(alumnos, ordenamiento, i));
+                i = Integer.parseInt(listaA.get(count).removeLast());
+                System.out.println("BLOQUE A: ");
+                imprimirLista(listaA);
             }
 
-            if(i<alumnos.size()){
-                listaB.addAll(bloque(alumnos,ordenamiento,i));
-                i = Integer.parseInt(listaB.remove(listaB.size()-1));
-                //System.out.println("B: "+"");
-                //imprimirLista(listaB);
+            if (i < alumnos.size()) {
+                listaB.add(bloque(alumnos, ordenamiento, i));
+                i = Integer.parseInt(listaB.get(count).removeLast());
+                System.out.println("BLOQUE B: ");
+                imprimirLista(listaB);
             }
 
-        }while(i<alumnos.size());
+            count++;
 
-        System.out.println("A: "+"");
-        imprimirLista(listaA);
-        System.out.println("B: "+"");
-        imprimirLista(listaB);
+        } while (i < alumnos.size());
 
-        listaC = mezcla(listaA, listaB, ordenamiento);
+        return mezcla(listaA, listaB, ordenamiento);
+    }
+
+    public LinkedList<LinkedList<String>> mezcla(LinkedList<LinkedList<String>> listaA, LinkedList<LinkedList<String>> listaB, int ordenamiento) {
+
+        LinkedList<LinkedList<String>> listaC = new LinkedList<LinkedList<String>>();
+
+        int count = 0;
+        boolean y;
+        do {
+
+            listaC.add(new LinkedList<String>());
+
+            if (listaB.size() > count) {
+                y = true;
+            } else {
+                y = false;
+            }
+
+            int pA = 0;
+            int pB = 0;
+
+            //Mezcla 
+            if (y) {
+
+                while (true) {
+                    System.out.println("\n========== Mezclando...===========");
+                    //System.out.println("pA: "+ pA);
+                    //System.out.println("pB: "+ pB);
+
+                    if (pA == listaA.get(count).size() || pB == listaB.get(count).size()) {
+                        break;
+                    }
+
+                    String[] elemento1 = listaA.get(count).get(pA).split(",");
+                    String[] elemento2 = listaB.get(count).get(pB).split(",");
+
+                    int aux = elemento1[ordenamiento].compareToIgnoreCase(elemento2[ordenamiento]);
+                    if (aux <= 0) {
+                        System.out.println(elemento1[ordenamiento] + " es menor o igual que " + elemento2[ordenamiento]);
+                        listaC.get(count).add(listaA.get(count).get(pA)); //elemento 1 es menor y va primero.
+                        //imprimirLista(listaC);
+                        pA++;
+                    } else {
+                        System.out.println(elemento1[ordenamiento] + " es mayor que " + elemento2[ordenamiento]);
+                        listaC.get(count).add(listaB.get(count).get(pB)); //elemento 2 es menor y va primero.
+                        //imprimirLista(listaC);
+                        pB++;
+                    }
+                }
+
+                while (pA < listaA.get(count).size()) {
+                    listaC.get(count).add(listaA.get(count).get(pA));
+                    pA++;
+                }
+
+                while (pB < listaB.get(count).size()) {
+                    listaC.get(count).add(listaB.get(count).get(pB));
+                    pB++;
+                }
+                System.out.println("\n______________Mezclada_____________ ");
+                imprimirBloques(listaC.get(count));
+
+            } else {
+
+                while (pA < listaA.get(count).size()) {
+                    listaC.get(count).add(listaA.get(count).get(pA));
+                    pA++;
+                }
+
+            }
+
+            //El resto de la lista se pone.
+            count++;
+            //System.out.println("hagamos el ciclo con: "+count);
+            //System.out.println("sizeof A: "+listaA.size());
+
+        } while (count < listaA.size());
+
+        return listaC;
+
+    }
+
+    public LinkedList<LinkedList<String>> segundaFase(LinkedList<LinkedList<String>> listaC, int ordenamiento){
+
+        LinkedList<LinkedList<String>> listaA = new LinkedList<LinkedList<String>>();
+        LinkedList<LinkedList<String>> listaB = new LinkedList<LinkedList<String>>();
+        while(listaC.size() != 1){
+
+            for(int i=0; i<listaC.size(); i++){
+                if(i%2 == 0){
+                    listaA.add(listaC.get(i));
+                }else{
+                    listaB.add(listaC.get(i));
+                }
+            }
+            listaC = mezcla(listaA,listaB, ordenamiento);
+
+            listaA.clear();
+            listaB.clear();
+        }
+
+        return listaC;
+
+    }
+    
+    public LinkedList<LinkedList<String>> mezclaEquilibrada(LinkedList<String> alumnos, int ordenamiento, int i) {
+
+        System.out.println("=======================INICIAL DESORDENADA >:v====================\n");
+        imprimirBloques(alumnos);
+
+        LinkedList<LinkedList<String>> listaC = primerFase(alumnos, ordenamiento);
+        listaC = segundaFase(listaC, ordenamiento);
+        System.out.println("=======================FINAL ORDENADA====================");
 
         return listaC;
     }
 
-    public LinkedList<String> mezcla(LinkedList<String> listaA, LinkedList<String> listaB, int ordenamiento){
-       
-        LinkedList<String> listaC = new LinkedList<String>();
-
-        int min=0,k=0;
-        int x = listaA.size();
-        int y = listaB.size();
-
-        if(x==y || x<y){
-            min = x;
-        }
-        else if(y<x){
-            min = y;
-        }
-
-        //Mezcla 
-
-        if(min>0){
-
-            while(k<min){
-                System.out.println("\n========== Mezclando...===========");
-
-
-                String[] elemento1 = listaA.get(k).split(",");
-                String[] elemento2 = listaB.get(k).split(",");
-
-                int aux = elemento1[ordenamiento].compareToIgnoreCase(elemento2[ordenamiento]);
-                if(aux <= 0){ 
-                    System.out.println(elemento1[ordenamiento]+" es menor o igual que "+elemento2[ordenamiento]);
-                    listaC.add(listaA.get(k)); //elemento 1 es menor y va primero.
-                    //imprimirLista(listaC);
-                    listaC.add(listaB.get(k)); // este después.
-                    imprimirLista(listaC);
-                }
-                else{
-                    System.out.println(elemento1[ordenamiento]+" es mayor que "+elemento2[ordenamiento]);
-                    listaC.add(listaB.get(k)); //elemento 2 es menor y va primero.
-                    //imprimirLista(listaC);
-                    listaC.add(listaA.get(k)); // este después.
-                    imprimirLista(listaC);
-                }
-                k++;
+    public static void imprimirLista(LinkedList<LinkedList<String>> lista) {
+        for (LinkedList<String> it : lista) {
+            //System.out.println("BLOQUE: ");
+            String[] elementos = new String[it.size()];
+            for (int i = 0; i < it.size(); i++) {
+                elementos[i] = it.get(i);
             }
-
+            System.out.println(Arrays.asList(elementos) + "\n");
         }
-
-        //El resto de la lista se pone.
-        //System.out.println("hagamos el ciclo con: "+k);
-        while(k<listaA.size()){
-            listaC.add(listaA.get(k));
-            k++;
-        }
-
-        while(k<listaB.size()){
-            listaC.add(listaB.get(k));
-            k++;
-        }
-        System.out.println("\n______________Mezclada_____________ ");
-        imprimirLista(listaC);
-
-        return listaC;
-
     }
-
-    public LinkedList<String> mezclaEquilibrada(LinkedList<String> alumnos, int ordenamiento, int i){
-        LinkedList<String> lista = new LinkedList<String>();
-        System.out.println("Lista a ordenar: ");
-        lista = bloque(alumnos,ordenamiento,i);
-        int it = Integer.parseInt(lista.remove(lista.size()-1));
-        imprimirLista(alumnos);
-
-        //System.out.println("Con tamaño: "+lista.size());
-
-        if(it == alumnos.size()-1){
-            //System.out.println(it+" = "+(alumnos.size()-1));
-            System.out.println("La lista ya esta ordenada! :D");
-            imprimirLista(lista);
-            return lista;
-        }
-        else{
-            lista = intercalacion(alumnos,ordenamiento);
-            imprimirLista(alumnos);
-            lista = mezclaEquilibrada(lista,ordenamiento,-1);
-        }
-        
-        return lista;
-    }
-
-    public void imprimirLista(LinkedList<String> lista){
+    
+    public static void imprimirBloques(LinkedList<String> lista){
         String[] elementos = new String[lista.size()];
         for(int i=0; i<lista.size(); i++){
             elementos[i] = lista.get(i);
         }
-        System.out.println("lista = "+Arrays.asList(elementos)+"\n");
+        System.out.println(Arrays.asList(elementos)+"\n");
     }
  
 }
